# python_artifact_code_for_jenkins_website

./: README.md  pyproject.toml
calculadora_tk.egg-info/: PKG-INFO  SOURCES.txt
